--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,5 @@
   ],
   "start_url": "index.html",
   "background_color": "darkgoldenrod",
-  "theme_color": "darkgoldenrod",
-  "prefer_related_applications": "true"
+  "theme_color": "darkgoldenrod"
 }
