--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,6 @@
   "start_url": ".",
   "background_color": "darkgoldenrod",
   "theme_color": "darkgoldenrod",
-  "prefer_related_applications": true
+  "prefer_related_applications": true,
+  "orientation": "portrait"
 }
